# lutoma.org

./: .gitignore  Dockerfile  README.md  manage.py  nuxt.config.js  package.json  pyproject.toml
.github/workflows/: docker-publish.yml
assets/: main.scss
cms/: admin.py  api.py  models.py
cms/migrations/: 0001_initial.py  0002_alter_license_url.py  0003_alter_license_identifier.py
components/: Navigation.vue  PhotoGrid.vue  PhotoStory.vue
frontend/: .gitignore  nuxt.config.js  package.json
frontend/assets/: main.scss
frontend/components/: Navigation.vue  PhotoGrid.vue  PhotoStory.vue  fa.js
frontend/layouts/: default.vue  full-width.vue
frontend/pages/: about.vue  code.vue  contact.vue  index.vue
frontend/pages/photos/: [...slug].vue  index.vue
frontend/plugins/: fontawesome.js  vue-lazyload.js
frontend/static/: lutoma.asc
layouts/: default.vue  full-width.vue
lutomacms/: api.py  asgi.py  settings.py  urls.py  wsgi.py
pages/: about.vue  code.vue  contact.vue  index.vue
pages/photos/: _.vue  index.vue
photos/: admin.py  api.py  models.py
photos/migrations/: 0001_initial.py  0002_photo_image_exif.py  0003_remove_album_license_url_remove_album_photos_and_more.py  0004_album_hero_image_alter_album_license_albumlist.py
plugins/: vue-lazyload.js
